changed script to use ProcessBuilder instead of Process.  Removed extra header outputs for script.  moved the CRLF in OKResponse to only output when notScript.